[project]
name = "forms-sheets-webhook-server"
version = "0.1.0"
description = "Flask webhook server that persists form responses to Excel workbooks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "openpyxl>=3.1",
    "gunicorn>=21.2",
    "filelock>=3.13",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = false
